--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -87,6 +87,13 @@
           <div class="carousel-item active">
             <div class="container">
               <div class="carousel-caption">
+                <p><strong>Karaf Karaf 4.2.7 has been released! (29/09/19)</strong> - This is an update patch for Apache Karaf 4.2.x, containing bug fixes and improvements. (<a href="news.html">Details</a>)</p>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="container">
+              <div class="carousel-caption">
                 <p><strong>Karaf Runtime 4.2.6 has been released! (10/6/19)</strong> - This is an update patch for Apache Karaf 4.2.x, containing bug fixes and improvements. (<a href="news.html">Details</a>)</p>
               </div>
             </div>
@@ -123,13 +130,6 @@
             <div class="container">
               <div class="carousel-caption">
                 <p><strong>Karaf Runtime 4.2.3 has been released! (11/2/19)</strong> - This is an update patch for Apache Karaf 4.2.x, containing bug fixes and improvements. (<a href="news.html">Details</a>)</p>
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item ">
-            <div class="container">
-              <div class="carousel-caption">
-                <p><strong>Karaf Cave 4.1.2 has been released! (21/1/19)</strong> - This is an update patch for Apache Cave 4.1.x, containing bug fixes and improvements. (<a href="news.html">Details</a>)</p>
               </div>
             </div>
           </div>
@@ -172,7 +172,7 @@
             <h2 class="featurette-heading">Power your applications with <span class="text-muted">Karaf Runtime</span></h2>
             <p class="lead">Karaf is a lightweight, powerful, and enterprise ready applications runtime. It provides all the ecosystem and bootstrapping options you need for your applications. It runs on premise or on cloud.
             By polymorphic, it means that Karaf can host any kind of applications: WAR, OSGi, Spring, and much more.</p>
-            <p>Last version <strong>4.2.6</strong> - (10/6/19)</p>
+            <p>Last version <strong>4.2.7</strong> - (29/09/19)</p>
             <p><a class="btn btn-primary" href="projects.html" role="button">Learn more &raquo;</a></p>
           </div>
           <div class="col-md-5">
