--- a/src/main/webapp/news.html
+++ b/src/main/webapp/news.html
@@ -82,9 +82,9 @@
             <div class="card-body d-flex flex-column align-items-start">
               <strong class="d-inline-block mb-2 text-success"><i class="fas fa-rocket"></i> Announce</strong>
               <h3 class="mb-0">
-                <a class="text-dark">Karaf Runtime 4.2.6</a>
+                <a class="text-dark">Karaf Runtime 4.2.7</a>
               </h3>
-              <div class="mb-1 text-muted">June 10, 2019</div>
+              <div class="mb-1 text-muted">September 29, 2019</div>
               <p class="card-text mb-auto">This is an update patch for Apache Karaf 4.2.x series. We invite all users to upgrade to this new stable series, bringing a lot of fixes, improvements and dependency upgrades.</p>
               <a href="#">Learn more</a>
             </div>
@@ -104,6 +104,87 @@
         <div class="row mb-5 mt-5">
             <div class="col-md-10">
               <h2 class="pb-3 mb-4 font-italic border-bottom"><i class="fas fa-bullhorn"></i> Fresh news</h2>
+
+              <div class="pb-4 mb-3 border-bottom">
+                <h3 class="text-dark">Karaf Runtime 4.2.7 has been released ! <span class="text-muted">September 29, 2019</span></h3>
+                <p>This is an update patch for Apache Karaf 4.2.x, containing bug fixes, improvements and dependency upgrades.</p>
+                <p>Among this new features, we have:</p>
+                <ul>
+                  <li>Add flag to mark transitive dependencies</li>
+                  <li>Add jetty-proxy bundle in http/jetty feature</li>
+                  <li>Add support for elliptic keys in the PublicKeyLoginModule</li>
+                  <li>ConfigMBean should reflect config:edit command for factory</li>
+                  <li>Move Spring 5.0.x features in spring-legacy features repository</li>
+                </ul>
+                <div class="pl-5 pb-3">
+                  <table class="table table-striped table-sm w-75">
+                    <thead class="thead-dark">
+                    <th>Name</th>
+                    <th>Versions</th>
+                    </thead>
+                    <tbody>
+                    <tr>
+                      <td><strong>Pax Web 7.2.11</strong></td>
+                      <td>7.2.10</td>
+                    </tr>
+                    <tr>
+                      <td><strong>Spring</strong></td>
+                      <td>5.1.9.RELEASE</td>
+                    </tr>
+                    <tr>
+                      <td><strong>Aries Proxy</strong></td>
+                      <td>1.1.6</td>
+                    </tr>
+                    <tr>
+                      <td><strong>Aries Spi Fly</strong></td>
+                      <td>1.2.2</td>
+                    </tr>
+                    <tr>
+                      <td><strong>Felix ConfigAdmin</strong></td>
+                      <td>1.9.16</td>
+                    </tr>
+                    <tr>
+                      <td><strong>Felix HTTP</strong></td>
+                      <td>4.0.10</td>
+                    </tr>
+                    <tr>
+                      <td><strong>Jetty</strong></td>
+                      <td>9.4.20.v20190813</td>
+                    </tr>
+                    <tr>
+                      <td><strong>jline</strong></td>
+                      <td>3.12.1</td>
+                    </tr>
+                    <tr>
+                      <td><strong>CXF</strong></td>
+                      <td>3.3.2</td>
+                    </tr>
+                    <tr>
+                      <td><strong>JNA</strong></td>
+                      <td>5.4.0</td>
+                    </tr>
+                    <tr>
+                      <td><strong>Felix WebConsole</strong></td>
+                      <td>4.3.16</td>
+                    </tr>
+                    <tr>
+                      <td><strong>Narayana</strong></td>
+                      <td>5.9.7.Final</td>
+                    </tr>
+                    <tr>
+                      <td><strong>Pax Logging</strong></td>
+                      <td>1.11.2</td>
+                    </tr>
+                    <tr>
+                      <td><strong>Hibernate-validator</strong></td>
+                      <td>6.0.17.Final</td>
+                    </tr>
+                    </tbody>
+                  </table>
+                </div>
+                <a class="btn btn-outline-primary" href="download.html">Download &raquo;</a>
+                <a class="btn btn-outline-primary" href="https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12345539" target="_blank">Release Notes &raquo;</a>
+              </div><!-- /.blog-post -->
 
               <div class="pb-4 mb-3 border-bottom">
                 <h3 class="text-dark">Karaf Runtime 4.2.6 has been released ! <span class="text-muted">June 10, 2019</span></h3>
