--- a/src/main/webapp/documentation.html
+++ b/src/main/webapp/documentation.html
@@ -388,7 +388,9 @@
         <div class="row mb-5 mt-5">
             <div class="col">
               <h2 class="pb-3 mb-4 font-italic border-bottom"><i class="fas fa-glasses"></i> Articles</h2>
-
+              <div>
+                <a href="http://blog.nanthrax.net/?p=954">Introducing Apache Karaf Cave 4.2.x</a>
+              </div><!-- /.blog-post -->
               <div>
                 <a href="http://blog.nanthrax.net/?p=943">Using Apache Karaf with Kubernetes</a>
               </div><!-- /.blog-post -->
