--- a/src/main/webapp/news.html
+++ b/src/main/webapp/news.html
@@ -106,6 +106,13 @@
               <h2 class="pb-3 mb-4 font-italic border-bottom"><i class="fas fa-bullhorn"></i> Fresh news</h2>
 
               <div class="pb-4 mb-3">
+                <h3 class="text-dark">Karaf Cave 4.2.1 has been released ! <span class="text-muted">November 29, 2019</span></h3>
+                <p>This is an update patch for Cave 4.2.x series. It brings bug fixes.</p>
+                <a class="btn btn-outline-primary" href="download.html">Download &raquo;</a>
+                <a class="btn btn-outline-primary" href="https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12346450" target="_blank">Release Notes &raquo;</a>
+              </div><!-- /.blog-post -->
+
+              <div class="pb-4 mb-3">
                 <h3 class="text-dark">Karaf Cave 4.2.0 has been released ! <span class="text-muted">October 28, 2019</span></h3>
                 <p>This is the first release in the Cave 4.2.x series. It brings bug fixes, improvements, and a complete refactor to reduce number of bundles and simplify API.</p>
                 <p>With this new version, you can:</p>
