--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@ permalink: /
       <div class="carousel-item active">
         <div class="container">
           <div class="carousel-caption">
+            <p><strong>Karaf 4.4.4 has been released! (17/09/23)</strong> - This is a maintenance release for Karaf 4.4.x series. It contains a lot of updates and fixes. (<a href="/news.html">Details</a>)</p>
+          </div>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <div class="container">
+          <div class="carousel-caption">
             <p><strong>Karaf Decanter 2.10.0 has been released! (24/02/23)</strong> - This is a maintenance release for Decanter 2.x series. It contains a lot of updates and fixes. (<a href="/news.html">Details</a>)</p>
           </div>
         </div>
@@ -89,13 +96,6 @@ permalink: /
           </div>
         </div>
       </div>
-      <div class="carousel-item">
-        <div class="container">
-          <div class="carousel-caption">
-            <p><strong>Karaf Decanter 2.9.0 has been released! (20/2/22)</strong> - This is a new release for Karaf Decanter 2.x series. It contains bunch of dependency updates and couple of improvements. (<a href="/news.html">Details</a>)</p>
-          </div>
-        </div>
-      </div>
     </div>
   </div>
 
@@ -135,7 +135,7 @@ permalink: /
         <h2 class="featurette-heading">Power your applications with <span class="text-muted">Karaf Runtime</span></h2>
         <p class="lead">Karaf is a lightweight, powerful, and enterprise ready modulith runtime. It provides all the ecosystem and bootstrapping options you need for your applications. It runs on premise or on cloud.
         This modulith runtime supports several frameworks and different kind of applications: REST/API, Web, Spring Boot, and much more.</p>
-        <p>Last version <strong>4.4.3</strong> - (10/01/23)</p>
+        <p>Last version <strong>4.4.4</strong> - (17/09/23)</p>
         <p><a class="btn btn-primary" href="/projects.html" role="button">Learn more &raquo;</a></p>
       </div>
       <div class="col-md-5">
