--- a/news.html
+++ b/news.html
@@ -13,9 +13,9 @@ permalink: /news
             <div class="card-body d-flex flex-column align-items-start">
               <strong class="d-inline-block mb-2 text-success"><i class="fas fa-rocket"></i> Announce</strong>
               <h3 class="mb-0">
-                <a class="text-dark">Karaf OSGi runtime 4.4.4</a>
+                <a class="text-dark">Karaf OSGi runtime 4.4.5</a>
               </h3>
-              <div class="mb-1 text-muted">September 17, 2023</div>
+              <div class="mb-1 text-muted">January 10, 2024</div>
               <p class="card-text mb-auto">Apache Karaf 4.4.x series brings OSGi R8 support, Pax Web 8.0.x, Pax Logging 2.1.x, and a lot of otther improvements and updates.</p>
               <a href="#">Learn more</a>
             </div>
@@ -48,6 +48,22 @@ permalink: /news
         <div class="row mb-5 mt-5">
             <div class="col-md-10">
               <h2 class="pb-3 mb-4 font-italic border-bottom"><i class="fas fa-bullhorn"></i> Fresh news</h2>
+
+              <div class="pb-4 mb-3 border-bottom">
+                <h3 class="text-dark">Karaf OSGi runtime 4.4.5 has been released! <span class="text-muted">January 10, 2024</span></h3>
+                <p>Apache Karaf runtime 4.4.5 is a maintenance release, bringing a lot of dependency updates and fixes, especially:
+                <ul>
+									<li>isolate config shell commands in a dedicated bundle to avoid refresh and race condition at startup</li>
+									<li>better JDK21 support with new ASM version (9.6)</li>
+									<li>upgrade to Jetty 9.4.53.v20231009 and Pax Web 8.0.24</li>
+									<li>upgrade to Pax Logging 2.2.6 supporting Log4j 2.22.1 and commons-logging 1.3.0</li>
+									<li>fix webconsole plugins loading</li>
+									<li>upgrade to sshd 2.11.0 fixing ecdsa key support</li>					
+									<li>...</li>
+                </ul>
+                <a class="btn btn-outline-primary" href="archives.html">Archives &raquo;</a>
+                <a class="btn btn-outline-primary" href="https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12353604" target="_blank">Release Notes &raquo;</a>
+              </div><!-- /.blog-post -->
 
               <div class="pb-4 mb-3 border-bottom">
                 <h3 class="text-dark">Karaf OSGi runtime 4.4.4 has been released! <span class="text-muted">September 17, 2023</span></h3>
